fix: spaces data/choline_transporter_butkiewicz/meta.yaml

--- a/data/choline_transporter_butkiewicz/meta.yaml
+++ b/data/choline_transporter_butkiewicz/meta.yaml
@@ -1,11 +1,11 @@
 ---
 name: choline_transporter_butkiewicz
-description: "\n        This dataset was originally curated from HTS data at the PubChem database.           The primary screen AID 488975 identified inhibitors\
-    \ of CHT.         The counter screen AID 493221 was used as a validation screen             to confirm the active compounds that inhibit CHT.      \
-    \   AID504840 and AID588401 experiments were used as additional validation experiments.         The screen AID 493222 evaluated remaining active compounds\
-    \ for non-specific activity               in parental HEK293 cells.         AID602208 tested a selected set of compounds for 3H choline uptake.    \
-    \     The final set of 254 active compounds was determined by the overlap of active compounds             in screens AID 493221, AID504840, and AID588401\
-    \             subtracting any non-specific hits from AID 49322         and all inactive compounds in the re-confirmation screen AID602208.\n        "
+description: This dataset was originally curated from HTS data at the PubChem database. The primary screen AID 488975 identified inhibitors of CHT. The
+    counter screen AID 493221 was used as a validation screen to confirm the active compounds that inhibit CHT. AID504840 and AID588401 experiments were
+    used as additional validation experiments. The screen AID 493222 evaluated remaining active compounds for non-specific activity in parental HEK293 cells.
+    AID602208 tested a selected set of compounds for 3H choline uptake. The final set of 254 active compounds was determined by the overlap of active compounds
+    in screens AID 493221, AID504840, and AID588401 subtracting any non-specific hits from AID 49322 and all inactive compounds in the re-confirmation screen
+    AID602208.
 targets:
     - id: activity_choline_transporter
       description: inhibition of choline transporter receptor (1) or not (0).
@@ -47,8 +47,8 @@ bibtex:
                     volume = {18},
                     number = {1},
                     pages = {735--756},
-                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller                 and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
-                    title = {Benchmarking Ligand-Based Virtual High-Throughput Screening                 with the {PubChem} Database},
+                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
+                    title = {Benchmarking Ligand-Based Virtual High-Throughput Screening with the {PubChem} Database},
                     journal = {Molecules}}
     - |-
       @article{Kim2018,
@@ -60,7 +60,7 @@ bibtex:
                     volume = {47},
                     number = {D1},
                     pages = {D1102--D1109},
-                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and                 Asta Gindulyte and Jia He and Siqian He and Qingliang Li                     and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and                         Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
+                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
                     title = {{PubChem} 2019 update: improved access to chemical data},
                     journal = {Nucleic Acids Research}}
     - |-
@@ -71,6 +71,6 @@ bibtex:
                     publisher = {Chem Inform},
                     volume = {3},
                     number = {1},
-                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.                  and Lowe, E. W.  and Weaver, D. C.  and Meiler, J.},
-                    title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets                 from the {P}ub{C}hem {D}atabase}},
+                    author = {Butkiewicz, M. and Wang, Y. and Bryant, S. H. and Lowe, E. W. and Weaver, D. C. and Meiler, J.},
+                    title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from the {P}ub{C}hem {D}atabase}},
                     journal = {Chemical Science}}
