--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
       rev: 0.2.2
       hooks:
           - id: yamlfmt
+            exclude: ^experiments/configs
 
     - repo: https://github.com/psf/black
       rev: 22.12.0
