chore: run pre-commit in CI, rework datasets (#98)
* chore: run pre-commit in CI

* chore: rework datasets

* finish reworking ClinTox

* chore: continue cleanup

* chore: continue cleanup

* chore: continue cleaning

* update contribution guide

* fix optional deps

* update contribution guide

* update contribution guide

* chore: continue cleanup

* chore: continue cleanup

* chore: continue cleanup

* chore: continue cleanup

* chore: continue cleanup

* lint yaml

* feat: update CONTRIBUTING.md

* feat: remove duplicated split_col key

* feat: rm data/flashpoint/data_clean.csv

* feat: rm word

* fix: spaces data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml

* fix: spaces data/choline_transporter_butkiewicz/meta.yaml

* fix: data/choline_transporter_butkiewicz/transform.py

* fix: data/choline_transporter_butkiewicz/transform.py 2

* fix: data/freesolv/transform.py

* fix: data/kcnq2_potassium_channel_butkiewicz/meta.yaml

* fix: data/kcnq2_potassium_channel_butkiewicz/transform.py

* fix: data/kcnq2_potassium_channel_butkiewicz/meta.yaml grammar

* fix: data/kcnq2_potassium_channel_butkiewicz/transform.py grammar

* fix: spaces data/ld50_zhu/meta.yaml

* fix: data/m1_muscarinic_receptor_antagonists_butkiewicz/meta.yaml

* fix: data/m1_muscarinic_receptor_antagonists_butkiewicz/transform.py

* fix data/orexin1_receptor_butkiewicz/meta.yaml

* fix data/orexin1_receptor_butkiewicz/transform.py

* fix: data/pampa_ncats/meta.yaml

* fix: data/potassium_ion_channel_kir2_1_butkiewicz/meta.yaml

* data/potassium_ion_channel_kir2_1_butkiewicz/transform.py

* fix: data/serine_threonine_kinase_33_butkiewicz/meta.yaml

* fix: data/serine_threonine_kinase_33_butkiewicz/transform.py

* feat: update .gitignore for vim

* feat: Add uris field for identifiers (#103)

* Add `uris` field for identifiers

* Linting

* update valdation

* [pre-commit.ci] auto fixes from pre-commit.com hook

--- a/data/ClinTox/meta.yaml
+++ b/data/ClinTox/meta.yaml
@@ -1,17 +1,21 @@
 ---
 name: ClinTox
-description: The ClinTox dataset includes drugs that have failed clinical trials for toxicity reasons and also drugs that are associated with successful
+description: The ClinTox dataset includes drugs that have failed clinical trials         for toxicity reasons and also drugs that are associated with successful
     trials.
 targets:
     - id: clinical_toxicity
       description: whether it can cause clinical toxicity (1) or not (0).
-      units: clinical_toxicity
-      type: categorical
+      units:
+      type: boolean
       names:
-          - clinical toxicity
-          - toxicity
-          - drug Induced clinical toxicity
-          - drug failed in clinical trials
+          - clinically toxic
+          - displaying clinical toxicity
+          - toxic
+      uris:
+          - http://purl.bioontology.org/ontology/MESH/Q000633
+          - https://ncit.nci.nih.gov/ncitbrowser/ConceptReport.jsp?dictionary=NCI_Thesaurus&ns=ncit&code=C27990
+          - https://ncit.nci.nih.gov/ncitbrowser/ConceptReport.jsp?dictionary=NCI_Thesaurus&ns=ncit&code=C27955
+split_col: split
 identifiers:
     - id: SMILES
       type: SMILES
