--- a/data/kcnq2_potassium_channel_butkiewicz/meta.yaml
+++ b/data/kcnq2_potassium_channel_butkiewicz/meta.yaml
@@ -1,23 +1,23 @@
 ---
 name: kcnq2_potassium_channel_butkiewicz
-description: 'These are nine high-quality high-throughput screening (HTS) datasets from [1]. These datasets were curated from HTS data at the PubChem database
-    [2]. Typically, HTS categorizes small molecules into hit, inactive, or unspecified against a certain therapeutic target. However, a compound may be
-    falsely classified as a hit due to experimental artifacts such as optical interference. Moreover, because the screening is performed without duplicates,
-    and the cutoff is often set loose to minimize the false negative rates, the results from the primary screens often contain high false positive rates
-    [3]. Hence the result from the primary screen is only used as the first iteration to reduce the compound library to a smaller set of further confirmatory
-    tests. Here each dataset is carefully collated through confirmation screens to validate active compounds. The curation process is documented in [1].
-    Each dataset is identified by the PubChem Assay ID (AID). Features of the datasets: (1) At least 150 confirmed active compounds present; (2) Diverse
-    target classes; (3) Realistic (large number and highly imbalanced label).'
+description: This dataset was initially curated from HTS data at the PubChem database. Details are reported by Butkiewicz et al. (2013). Primary screen
+    AID 2239, AID 2287 validated active compounds to be potentiators. Counter screens are AID 2282, AID 2283, and AID 2558. Final set of 213 active compounds
+    was acquired by removing the active compounds of AID 2282, AID 2283 and AID 2558 from the confirmatory screen active set of compounds (AID 2287).
 targets:
     - id: activity_kcnq2_potassium_channel
-      description: whether it active against kcnq2 potassium channel receptor (1) or not (0).
-      units: activity
-      type: categorical
+      description: whether it is active against kcnq2 potassium channel receptor (1) or not (0).
+      units:
+      type: boolean
       names:
-          - kcnq2 potassium channel activity
-          - kcnq2 potassium channel Inhibitor
-          - activity against kcnq2 potassium channel
-          - kcnq2 potassium channel receptor
+          - inhibitor of kcnq2 potassium channel activity
+          - displaying activity against kcnq2 potassium channel
+      pubchem_aids:
+          - 2239
+          - 2287
+          - 2282
+          - 2283
+          - 2558
+      uris: []
 identifiers:
     - id: SMILES
       type: SMILES
@@ -30,6 +30,7 @@ links:
       description: corresponding publication
     - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
       description: corresponding publication
+split_col: split
 num_points: 302405
 url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
@@ -56,7 +57,7 @@ bibtex:
                     volume = {47},
                     number = {D1},
                     pages = {D1102--D1109},
-                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
+                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker                     and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
                     title = {{PubChem} 2019 update: improved access to chemical data},
                     journal = {Nucleic Acids Research}}
     - |-
@@ -67,6 +68,6 @@ bibtex:
                     publisher = {Chem Inform},
                     volume = {3},
                     number = {1},
-                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.  and Lowe, E. W.  and Weaver, D. C.  and Meiler, J.},
+                    author = {Butkiewicz, M. and Wang, Y. and Bryant, S. H. and Lowe, E. W. and Weaver, D. C. and Meiler, J.},
                     title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from the {P}ub{C}hem {D}atabase}},
                     journal = {Chemical Science}}
