--- a/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
+++ b/data/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
@@ -1,9 +1,9 @@
 ---
 name: cav3_t-type_calcium_channels_butkiewicz
-description: This dataset was initially curated from HTS data at the PubChem database. The curation process is documented in Butkiewicz et al. Primary screening
-    with AID 449739 identified inhibitors of Cav3 T-type calcium channels. Four follow-up screens were performed to confirm inhibitory effects on smaller
-    sets of compounds involving AID 493021, AID 493022, AID 493023, and AID 493041. AID 489005 was performed as counter screen validating active compounds
-    of the primary screen.
+description: "\n        This dataset was initially curated from HTS data at the PubChem database.         The curation process is documented in Butkiewicz\
+    \ et al.         Primary screening with AID 449739 identified inhibitors of Cav3 T-type calcium channels.         Four follow-up screens were performed\
+    \ to confirm inhibitory effects on smaller sets of compounds         involving AID 493021, AID 493022, AID 493023, and AID 493041.\n        AID 489005\
+    \ was performed as counter screen validating active compounds of the primary screen.         "
 targets:
     - id: activity_cav3_t_type_calcium_channels
       description: whether it active against cav3 t-type calcium channels receptor (1) or not (0)
@@ -34,7 +34,10 @@ links:
       description: corresponding publication
     - url: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5962024/
       description: corresponding publication
-split_col: split
+benchmarks:
+    - name: TDC
+      link: https://tdcommons.ai/
+      split_column: split
 num_points: 100875
 url: https://tdcommons.ai/single_pred_tasks/hts/#butkiewicz-et-al
 bibtex:
@@ -48,7 +51,7 @@ bibtex:
                     volume = {18},
                     number = {1},
                     pages = {735--756},
-                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
+                    author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall                 and Pedro Teixeira and C. Weaver and Jens Meiler},
                     title = {Benchmarking Ligand-Based Virtual High-Throughput Screening with the {PubChem} Database},
                     journal = {Molecules}}
     - |-
@@ -61,7 +64,7 @@ bibtex:
                     volume = {47},
                     number = {D1},
                     pages = {D1102--D1109},
-                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
+                    author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He             and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky             and Jian Zhang and Evan E Bolton},
                     title = {{PubChem} 2019 update: improved access to chemical data},
                     journal = {Nucleic Acids Research}}
     - |-
@@ -72,6 +75,6 @@ bibtex:
                     publisher = {Chem Inform},
                     volume = {3},
                     number = {1},
-                    author = {Butkiewicz, M. and Wang, Y. and Bryant, S. H. and Lowe, E. W. and Weaver, D. C. and Meiler, J.},
+                    author = {Butkiewicz, M.  and Wang, Y.  and Bryant, S. H.  and Lowe, E. W.  and Weaver, D. C.              and Meiler, J.},
                     title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from the {P}ub{C}hem {D}atabase}},
                     journal = {Chemical Science}}
