--- a/data/orexin1_receptor_butkiewicz/meta.yaml
+++ b/data/orexin1_receptor_butkiewicz/meta.yaml
@@ -1,8 +1,12 @@
 ---
 name: orexin1_receptor_butkiewicz
-description: GPCR Orexin 1 is relevant for behavioral plasticity, the sleep-wake cycle, and gastric acid secretion. Three primary screens, AID 485270, AID
-    463079, AID 434989, were performed. Validation assay AID504701, AD492963. Counter screen 493232. More specific assay AID504699. AID504701 and AID504699
-    were combined to identify 234 active compounds excluding an overlap of 155 molecules.
+description: |-
+    "GPCR Orexin 1 is relevant for behavioral plasticity,
+    the sleep-wake cycle, and gastric acid secretion.Three primary screens,
+    AID 485270, AID 463079, AID 434989, were performed. Validation assay
+    AID504701, AD492963. Counter screen 493232. More specific assay
+    AID504699. AID504701 and AID504699 were combined to identify 234 active
+    compounds excluding an overlap of 155 molecules.
 targets:
     - id: activity_orexin1
       description: whether it is active against orexin1 receptor (1) or not (0).
@@ -47,8 +51,11 @@ bibtex:
       volume = {18},
       number = {1},
       pages = {735--756},
-      author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens Meiler},
-      title = {Benchmarking Ligand-Based Virtual High-Throughput Screening with the {PubChem} Database},
+      author = {Mariusz Butkiewicz and Edward Lowe and Ralf Mueller and
+      Jeffrey Mendenhall and Pedro Teixeira and C. Weaver and Jens
+      Meiler},
+      title = {Benchmarking Ligand-Based Virtual High-Throughput
+      Screening with the {PubChem} Database},
       journal = {Molecules}}
     - |-
       @article{Kim2018,
@@ -60,7 +67,10 @@ bibtex:
       volume = {47},
       number = {D1},
       pages = {D1102--D1109},
-      author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky and Jian Zhang and Evan E Bolton},
+      author = {Sunghwan Kim and Jie Chen and Tiejun Cheng and Asta
+      Gindulyte and Jia He and Siqian He and Qingliang Li and Benjamin
+      A Shoemaker and Paul A Thiessen and Bo Yu and Leonid Zaslavsky
+      and Jian Zhang and Evan E Bolton},
       title = {{PubChem} 2019 update: improved access to chemical data},
       journal = {Nucleic Acids Research}}
     - |-
@@ -71,6 +81,8 @@ bibtex:
       publisher = {Chem Inform},
       volume = {3},
       number = {1},
-      author = {Butkiewicz, M. and Wang, Y. and Bryant, S. H. and Lowe, E. W. and Weaver, D. C.  and Meiler, J.},
-      title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from the {P}ub{C}hem {D}atabase}},
+      author = {Butkiewicz, M. and Wang, Y. and Bryant, S. H. and Lowe,
+      E. W. and Weaver, D. C. and Meiler, J.},
+      title = {{H}igh-{T}hroughput {S}creening {A}ssay {D}atasets from
+      the {P}ub{C}hem {D}atabase}},
       journal = {Chemical Science}}
