--- a/data/flashpoint/meta.yaml
+++ b/data/flashpoint/meta.yaml
@@ -17,7 +17,7 @@ targets:
       uris:
           - http://semanticscience.org/resource/CHEMINF_000417
 identifiers:
-    - id: smiles
+    - id: SMILES
       type: SMILES
 license: CC BY 4.0
 num_points: 9878 # downloaded dataset has 14696 datapoints, but there are duplicate smiles
