--- a/data/caco2_wang/meta.yaml
+++ b/data/caco2_wang/meta.yaml
@@ -20,7 +20,10 @@ targets:
       uris:
           - http://www.bioassayontology.org/bao#BAO_0010008
           - http://purl.obolibrary.org/obo/MI_2162
-split_col: split
+benchmarks:
+    name: TDC
+    link: https://tdcommons.ai/
+    split_column: split
 identifiers:
     - id: SMILES
       type: SMILES
