feat: benchmark fields choline_transporter_butkiewicz

--- a/data/choline_transporter_butkiewicz/meta.yaml
+++ b/data/choline_transporter_butkiewicz/meta.yaml
@@ -28,7 +28,10 @@ targets:
           - 588401
           - 493222
           - 602208
-split_col: split
+benchmarks:
+    - name: TDC
+      link: https://tdcommons.ai/
+      split_column: split
 identifiers:
     - id: SMILES
       type: SMILES
