--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = gpt-neox
 	url = git@github.com:OpenBioML/gpt-neox.git
 	branch = main
+[submodule "lm-eval2"]
+	path = lm-eval2
+	url = git@github.com:OpenBioML/lm-eval2.git
+	branch = main
