--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 ---
 ci:
     autoupdate_schedule: quarterly
+    autofix_prs: false
+    submodules: false
 
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
