feat: change a to à

--- a/data/herg_karim_et_al/meta.yaml
+++ b/data/herg_karim_et_al/meta.yaml
@@ -1,10 +1,7 @@
 ---
 name: herg_karim_et_al
-description: |-
-    A integrated Ether-a-go-go-related gene (hERG) dataset consisting
-    of molecular structures labelled as hERG (<10uM) and non-hERG (>=10uM) blockers in
-    the form of SMILES strings was obtained from the DeepHIT, the BindingDB database,
-    ChEMBL bioactivity database, and other literature.
+description: "A integrated Ether-à-go-go-related gene (hERG) dataset consisting\nof molecular structures labelled as hERG (<10uM) and non-hERG (>=10uM)\
+    \ blockers in\nthe form of SMILES strings was obtained from the DeepHIT, the BindingDB database,\nChEMBL bioactivity database, and other literature."
 targets:
     - id: herg_blocker
       description: whether it blocks hERG (1, <10uM) or not (0, >=10uM)
@@ -15,8 +12,8 @@ targets:
           - hERG active compound
           - hERG blocker
           - hERG active compound <10uM
-          - human ether-a-go-go related gene (hERG) blocker
-          - activity against Human ether-a-go-go related gene (hERG)
+          - human ether-à-go-go related gene (hERG) blocker
+          - activity against Human ether-à-go-go related gene (hERG)
       uris:
           - http://purl.obolibrary.org/obo/MI_2136
 benchmarks:
