make peft optional

--- a/experiments/configs/accelerate_tune.yaml
+++ b/experiments/configs/accelerate_tune.yaml
@@ -17,8 +17,7 @@ model:
 
 # Training strategy
 prompt:
-    num_virtual_tokens: 2
-    prompt_tuning_init_text: ' '
+  enabled: true
 
 # Training configuration
 train:
